16 November 2004 Laurent Rineau
- fix documentation
- enum Face_badness { NOT_BAD, BAD, IMPERATIVELY_BAD }; and modified
specifications for MeshingCriteria_2, to refines too small faces near
clusters.

22 October 2004 Laurent Rineau
- fix two typo bugs in the testsuite

21 October 2004 Laurent Rineau
- Yet another killed bug!! :-) The minimum sine of triangle was badly
  computed.
- Refine_faces forgot to scan for bad faces the star of the new vertex.

20 October 2004 Laurent Rineau
- fixed details in Delaunay_mesh_size_criteria_2.h
  and marked todo and warning

19 October 2004 Laurent Rineau
- Revert changes from 2004/10/17. Refine_edges_for_refine_faces no
  longer exists. The conflicts zone of a point is calculated by using
  propagate_conflicts(), from the CDT. For that, Refine_edges uses a
  special Triangulation_mesher_level_traits_2.
- Special_zone is now useless.
- That's it: the bug is over!!
- Mesh_level no wants a function get_triangulation_traits() that
  returns a reference to the Triangulation_mesher_level_traits. THAT
BREAKS COMPATIBILTY with previous codes.
- The special traits class
  Refine_edges_triangulation_mesher_level_traits_2 has a function to
  set the current edge. This function is used to pass the edge to it,
  so that get_conflicts_zone() can work.

18 October 2004 Laurent Rineau
- Conforming_Delaunay_triangulation_maker_2 renamed to 
  Triangulation_conformer_2.
- Update of the documentation. Thanks to Michel Hoffman for his review of 
  the specifications

17 October 2004 Laurent Rineau
- Attempt to fix remaining bug: the list of faces modified by the insertion
of a point on a segment is not the conflicts zone of the
point. remove_constrained_edge() and insert_constraint() flip some faces. I
have added a class Refine_edges_for_refine_faces that handles a special
member special_zone (bad name) which is a set of
faces. do_before_conflict() and do_after_insertion() deal with functions